--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,59 +1,18 @@
 ---
 layout: default
 ---
-<div class="post">
 
-	<header class="page-header">
-		<h1>{{ page.title }}</h1>
-		<p class="meta">
-			{{ page.date | date: "%b %-d, %Y" }}
-			{% if page.link %} • <a href="{{page.link_url}}" target="_blank">{{page.link}}</a>{% endif %}
-			{% if page.author %} • {{ page.author }}{% endif %}
-			{% if page.meta %} • {{ page.meta }}{% endif %}
-		</p>
-	</header>
-
-	<div class="row">
-		
-		<article class="col-md-8">
-			{% if page.image %}
-			<div class="col-sm-5 img-pull-right">
-				<img src="/images/{{ page.image }}" class="img-thumbnail center-block" title="{{page.title}}" alt="{{page.title}}" data-bslightbox="true">
-			</div>
+<div class="panel panel-{% if page.badge_color %}{{ page.badge_color }}{% else %}primary{% endif %}">
+	<header class="panel-heading">
+		<h4 class="panel-title">
+			{{ page.date | date: "%B %-d, %Y" }}
+			{% if page.title != '1' %}
+			<br>
+			<small>{{ page.title }}</small>
 			{% endif %}
-
-			{{ content }}
-
-			<ul class="list-inline">
-				{% for tag in page.tags %}
-				<li class="label label-primary">{{ tag }}</li>
-				{% endfor %}
-			</ul>
-
-			<span class="clearfix"></span>
-			<hr>
-
-			<div class="panel-group" id="discussionAccordion" role="tablist" aria-multiselectable="true">
-				<div class="panel panel-default">
-					<div class="panel-heading" role="tab" id="headingOne">
-						<h4 class="panel-title">
-							<a role="button" data-toggle="collapse" data-parent="#discussionAccordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-								<i class="fa fa-fw fa-arrow-circle-down fa-spin"></i> Discussion
-							</a>
-						</h4>
-					</div>
-					<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-						<div class="panel-body">
-							{% include _disqus.html %}
-						</div>
-					</div>
-				</div>
-			</div>
-
-		</article>
-
-		<aside class="col-md-4 clear-md">{% include sidebar.html %}</aside>
-
+		</h4>
+	</header>
+	<div class="panel-body">
+		{{ page.content }}
 	</div>
-
 </div>
