--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,11 @@
 <body>
 	{% include nav.html %}
 
-	<div class="container">
+	<!-- <div class="container"> -->
 
 		{{ content }}
 
-	</div>
+	<!-- </div> -->
 
 	{% include footer.html %}
 	
