--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,7 +31,7 @@
 						{% for post in site.posts %}
 						{% unless post.next %}
 						<li>
-							<a href="#year{{ post.date | date: '%Y' }}">
+							<a href="#year{{ post.date | date: '%Y' }}" class="to-year" data-year="{{ post.date | date: '%Y' }}">
 								{{ post.date | date: '%Y' }}
 							</a>
 						</li>
@@ -40,7 +40,7 @@
 						{% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
 						{% if year != nyear %}
 						<li>
-							<a href="#year{{ post.date | date: '%Y' }}">
+							<a href="#year{{ post.date | date: '%Y' }}" class="to-year" data-year="{{ post.date | date: '%Y' }}">
 								{{ post.date | date: '%Y' }}
 							</a>
 						</li>
