--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,8 @@
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 
+	{% include analytics.html %}
+
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/wow-animate.min.css">
 
 	<script src="{{ site.baseurl }}/js/wow.min.js"></script>
