allow cors with hillsboroughcounty website

--- a/_layouts/civic-bs.html
+++ b/_layouts/civic-bs.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% include head.html %}
+<head>
+	<!-- Bootstrap -->
+	<link href="{{ site.url }}/css/main.css" rel="stylesheet">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
+
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
+	<link rel="stylesheet" href="{{ site.url }}/css/wow-animate.min.css">
+
+	<script src="{{ site.url }}/js/wow.min.js"></script>
+	<script>
+		new WOW().init();
+	</script>
+</head>
 
 <body>
-	<!-- {#% include nav.html %} -->
-
-	<!-- <div class="container"> -->
 
 		{{ content }}
-
-	<!-- </div> -->
-
-	{% include footer.html %}
 
 </body>
 </html>
