--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,10 +15,18 @@
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 
+	{% if site.github.url == 'http://ted.hillsboroughcdms.org' %}
+	<script type="text/javascript">
+	var host = window.location.hostname;
+	if (host != 'ted.hillsboroughcdms.org') {
+		window.location.replace('http://ted.hillsboroughcdms.org/');
+	}
+	</script>
+	{% endif %}
+
 	{% include analytics.html %}
 
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/wow-animate.min.css">
-
 	<script src="{{ site.baseurl }}/js/wow.min.js"></script>
 	<script>
 		new WOW().init();
