--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
 
-	{% if site.github.url == 'http://ted.hillsboroughcdms.org' %}
+	{% if site.github.url %}
 	<script type="text/javascript">
 	var host = window.location.hostname;
 	if (host != 'ted.hillsboroughcdms.org') {
